--- a/frontend-testing/index.html
+++ b/frontend-testing/index.html
@@ -2,35 +2,22 @@
 <html lang="en">
   <head>
     <title>Testing Basics</title>
-    <style>
-      html {
-        font-family: sans-serif;
-      }
-
-      body {
-        margin: 2rem;
-      }
-
-      div,
-      label {
-        display: block;
-        margin-bottom: 0.5rem;
-      }
-    </style>
-    <script type="module" defer src="app.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <script type="module" defer src="./app.js"></script>
   </head>
   <body>
+    <div class="wrapper">
     <form action="/calculate" method="POST">
-      <div>
         <label for="num1">First Number</label>
-        <input id="num1" name="num1" type="numeric" />
-      </div>
-      <div>
+        <input id="num1" placeholder="First Number" name="num1" type="numeric" />
         <label for="num2">Second Number</label>
-        <input id="num2" name="num2" type="numeric" />
-      </div>
-      <button>Calculate</button>
+        <input id="num2"  placeholder="First Number" name="num2" type="numeric" />
+        <button>Calculate</button>
     </form>
     <div id="result"></div>
+  </div>
   </body>
 </html>
